--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,11 @@
 /* IMPOSTAZIONI GENERALI */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap');
 
 body {
     width: 490px;
     background-image: url(img/sfondo.png);
     background-repeat: repeat-y;
+    font-family: 'Poppins', sans-serif;
 }
 
 
@@ -75,9 +77,10 @@ p {
     padding-top: 10px;
 }
 
-#div-table {
-    text-align: center;
+h3 {
+    padding-top: 10px;
 }
+
 /* ELEMENTI NEL MAIN - ARTICLE */
 strong {
     color: purple;
@@ -87,5 +90,11 @@ strong {
 /* FORM */
 
 /* ELEMENTI NELL' ASIDE */
+aside {
+    text-align: center;
+}
 
+#aside {
+    background-color: white;
+}
 /* FOOTER */
